--- a/css/game.css
+++ b/css/game.css
@@ -951,7 +951,7 @@ h4{
     color: var(--acento);
     font-size: 28px;
 }
-#game-msg-reload button{
+#game-msg-reload button, #game-msg-close #btn-close-yes, #game-msg-close #btn-close-no{
     position: absolute;
     top: 65%;
     left: 15%;
@@ -959,15 +959,21 @@ h4{
     height: 40px;
 }
 
-#game-msg-reload #btn-reload-no{
+#game-msg-reload #btn-reload-no, #game-msg-close #btn-close-no{
     position: absolute;
     top: 65%;
     left: 60%;
 }
+#game-msg-close{
+    width: 700px;
+    height: 350px;
+    transform: translate(40%, 45%);
+}
+
 
 #btn-reload{
     position: absolute;
-    right: 2%;
+    right: 7%;
     top: 5%;
     width: 50px;
     height: 50px;
@@ -981,7 +987,22 @@ h4{
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.40);
 
 }
+#btn-close{
+    position: absolute;
+    right: 2%;
+    top: 5%;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: rgba(99, 98, 98, 0.7);
+    background-image: url(../img/juego/iconoCruz.svg);
+    background-size: 40px 40px; 
+    background-position: center center;
+    background-repeat: no-repeat; 
+    border: none;
+    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.40);
 
+}
 .game-timer{
     position: absolute;
     top: 5%;
